# score-da

./: .dockerignore  .gitignore  Dockerfile  LICENSE  LICENSE-DATA  README.md  collect.sh  docker-compose.yml  grant.md  milestone-deliverables-guidelines.md
dashboard/: README.md  REDESIGN.md  (+1 more)
protocol/Avail/: README.md  package.json  pyproject.toml
protocol/Avail/analysis/: daily.csv  hourly.csv  plot.py
protocol/Avail/data/: chain_config.json  collect.ts  prices.csv  transform.py
protocol/Avail/data/blocks/: 2025-11-16.csv  2025-11-17.csv  2025-11-18.csv  2025-11-19.csv  2025-11-20.csv  2025-11-21.csv  2025-11-22.csv  2025-11-23.csv  2025-11-24.csv  2025-11-25.csv  2025-11-26.csv  2025-11-27.csv  2025-11-28.csv  2025-11-29.csv  2025-11-30.csv  2025-12-01.csv  2025-12-02.csv  2025-12-03.csv  2025-12-04.csv  2025-12-05.csv  2025-12-06.csv  2025-12-07.csv  2025-12-08.csv  2025-12-09.csv  2025-12-10.csv  2025-12-11.csv  2025-12-12.csv  2025-12-13.csv  2025-12-14.csv  2025-12-15.csv  2025-12-16.csv  2025-12-17.csv  2025-12-18.csv  2025-12-19.csv  2025-12-20.csv  2025-12-21.csv  2025-12-22.csv  2025-12-23.csv  2025-12-24.csv  2025-12-25.csv  (+50 more)
protocol/Avail/queries/: avail-daily.sql  avail-hourly.sql
protocol/Near/: README.md  collect.ts  near_data_test.py  package.json  pyproject.toml
protocol/Near/analysis/: chain_config.json  daily.csv  hourly.csv  plot.py  prices.csv
protocol/Near/cost/: plot.py
protocol/Near/data/: collect.ts  prices.csv  transform.py
protocol/Near/queries/: near-daily.sql  near-hourly.sql
protocol/Near/throughput/: plot.py
(+1013 files in other folders)
