[project]
name = "avail-protocol"
version = "1.0.0"
description = "Avail DA protocol testing and analysis tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "substrate-interface>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
